[package]
authors = ["Edward Elric <sasuke688848@gmail.com>"]
edition = "2021"
name = "node-serde"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["serde-json"] }
napi-derive = "2"
serde = "1.0.147"
serde_json = "1.0.87"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
